# petanque

./: .env  .gitignore  README.md  Wedstrijdoverzicht.csv  compose.yaml  compose_backend.yaml  compose_deploy.yaml  extract_teams.py  klad.txt  replace_sql.py
backend/: Cargo.toml  Dockerfile
backend/db/: app_password.txt  init.sql
backend/src/: main.rs  postgres.rs
backend/src/models/: field.rs  game.rs  gameteams.rs  mod.rs  round.rs  roundextra.rs  score.rs  start_time.rs  team.rs  winner.rs
backend/src/routes/: config.rs  field.rs  game.rs  gameteams.rs  login.rs  mod.rs  round.rs  roundextra.rs  score.rs  start_time.rs  winners.rs
frontend/: Cargo.toml  Dockerfile  index.html  style.scss  test.html  test2.html
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/app/: announcer_overview.rs  gamesview.rs  home.rs  mod.rs  rules.rs  teamview.rs
frontend/src/components/: auth_gate.rs  filters.rs  game.rs  game_list.rs  header.rs  input.rs  login.rs  matches.rs  mod.rs  points.rs  round.rs  score_input.rs  team.rs  team_list.rs
frontend/src/services/: fields.rs  games.rs  mod.rs  requests.rs  rounds.rs  scores.rs  start_times.rs  teams.rs
frontend/src/types/: fields.rs  games.rs  mod.rs  rounds.rs  scores.rs  start_times.rs  teams.rs
frontend/src/views/: home.rs
migrations/: 0001_create-users_up.sql  0002_add-root-user-to-users_up.sql
src/: postgres.rs
src/models/: field.rs  game.rs  result.rs  round.rs  team.rs
src/routes/: field.rs  mod.rs  round.rs
