[package]
name = "petanque-postgres"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
deadpool-postgres = "0.9.0"
env_logger = "^0.8"
log = "^0.4"
serde = "1.0"
serde_json = "1.0"
tokio-postgres = { version="0.7", features=["with-chrono-0_4"]}
futures = "0.3.28"
chrono = { version = "0.4", features = ["serde"] }

