[package]
name = "petanque-postgres"
version = "0.1.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
actix-session = {version="0.10.1", features = ["cookie-session"]}
deadpool-postgres = "0.14.1"
env_logger = "0.11.8"
log = "0.4.27"
serde = {version = "1.0.219", features=["derive"]}
serde_json = "1.0.140"
tokio-postgres = { version="0.7.13", features=["with-chrono-0_4"]}
futures = "0.3.31"
chrono = { version = "0.4.40", features = ["serde"] }
