[package]
name = "yes-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17"
web-sys = "0.3.64"
serde = "1.0.152"
serde_json = "1.0.94"
gloo-net= "0.2.6"
wasm-bindgen-futures = "0.4"

