[package]
name = "yes-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.6"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18"
web-sys = {version="0.3.69", features = ["HtmlSelectElement"]}
serde = "1.0.152"
serde_json = "1.0.94"
gloo-net= "0.6.0"
gloo-utils = "0.2.0"
wasm-bindgen-futures = "0.4"
reqwest = {version = "0.12.1", features = ["json", "cookies"]}
lazy_static = "1.4.0"
gloo = "0.11.0"
parking_lot = "0.12.1"
dotenv_codegen = "0.15.0"
thiserror = "2.0.12"
chrono = {version="0.4.35", features = ["serde"]}

